--- a/src/screens/ProfileScreen.css
+++ b/src/screens/ProfileScreen.css
@@ -75,6 +75,7 @@
 .profileScreenPlans > h3 {
   border-bottom: 1px solid #282c2d;
   padding-bottom: 10px;
+  color: #fff;
 }
 .profileScreenPlans {
   margin-top: 20px;
@@ -102,4 +103,35 @@
 }
 .hiddenProfileUrlForm {
   display: none;
+}
+.profileScreenPlans {
+  color: #d8d7d7;
+}
+.planContainer {
+  margin-top: 20px;
+}
+.planPackage {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  height: 60px;
+}
+.planPackage > button {
+  height: 35px;
+  background-color: #e50914;
+  border: none;
+  outline: none;
+  color: #fff;
+  padding: 5px 10px;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+}
+.planPackage > .currentPackage {
+  background-color: #a09a9a;
+  color: #fff;
+  pointer-events: none;
+}
+.planPackage:hover {
+  opacity: 0.7;
 }
